--- a/Border Animation & Image Hover/assets/css/style.css
+++ b/Border Animation & Image Hover/assets/css/style.css
@@ -11,7 +11,7 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 
-.box{
+.avatar{
     position: relative;
     height: 400px;
     width: 400px;
@@ -22,15 +22,15 @@ body{
     overflow: hidden;
 }
 
-.box::before{
+.avatar::before{
     content : '';
     position: absolute;
     inset : -10px 140px;
-    background-image: linear-gradient(red, yellow);
+    background-image: linear-gradient( #fa709a 0%, #fee140 100%);
     animation: animate 4s linear infinite;
     transition: 0.5s;
 }
-.box:hover::before{
+.avatar:hover::before{
     inset: -20px 0px;
 
 }
@@ -43,7 +43,7 @@ body{
         transform: rotate(360deg);
     }
 }
-.box::after{
+.avatar::after{
     content: '';
     position: absolute;
     inset: 6px;
@@ -51,7 +51,7 @@ body{
     z-index: 100;
     border-radius: 50%;
 }
-.content{
+.avatar .content{
     position: absolute;
     inset: 30px;
     z-index: 1000;
@@ -65,20 +65,20 @@ body{
     
 }
 
-.content img{
+.avatar .content img{
     position: absolute;
     top: 0px;
     left:0px;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    z-index: 100000000000;
+    z-index: 1;
 }
-.box:hover .content img{
+.avatar:hover .content img{
     opacity: 0;
 }
 
-.content h2{
+.avatar .content h2{
     position: relative;
     font-size: 1.5rem;
     text-align: center;
@@ -87,12 +87,12 @@ body{
     letter-spacing: 0.05rem;
     text-transform: uppercase;
 }
-.content span{
+.avatar .content span{
     font-size: 1rem;
     font-weight: 300;
 }
 
-.content a{
+.avatar .content a{
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 10px;
