--- a/3d Neumorphism Effect/style.css
+++ b/3d Neumorphism Effect/style.css
@@ -1,12 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: rgb(239, 237, 237);
 }
-.social-icons{
+body{
     width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+    font-family: "Rubik", sans-serif;
+}
+.title{
+    font-size: 25px;
+    font-weight: 700;
+}
+.social-icons{
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +33,7 @@
     border-radius: 5px;
     text-align: center;
     line-height: 50px;
-    color:#676767;
+    color:#0e0e0e;
     cursor: pointer;
     box-shadow: -3px -3px 5px 0px #ffffffa6,
                 3px 3px 5px 0px #0000004a;
